--- a/p2.css
+++ b/p2.css
@@ -1,21 +1,18 @@
 
 
-/* <h1>p1_Nacimiento de los primates</h1>
-				<link href="p1.css" type="text/css" rel="stylesheet"/> */
-
 
 
 body{
 			font-family: #00ffffarial;
 			
-			background-image: url(http://3.bp.blogspot.com/-r7XwslNU8fY/UbczbxQe7SI/AAAAAAAAdaQ/ebOaJ8uJHPY/s1600/cielo+y+nubes+vistas+desde+arriba.jpg);
+			background-image: url(https://cdn.pixabay.com/photo/2012/02/22/19/28/africa-15428__340.jpg);
 			font-size: 15pt;
 			}
 			
 			h1
 			{
 
-			color:white;
+			color:black;
 			font-style: oblique;
 			}
 	
@@ -23,7 +20,7 @@ body{
 			{
 			font-family: times new roman;
 			font-size: 26pt;
-			color:red;
+			color:#ff0000;
 			font-weight:bold;
 			}
 			
@@ -36,6 +33,7 @@ body{
 			
 			.clase
 			{
+
 			color:#ffff00;
 			font-style: oblique;
 			}
@@ -45,7 +43,6 @@ body{
   border: 1px solid #98be10;
   background: #f6feda;
 			}
-			
 			
 			#escuson{
 		background-color:  #ff0000;
