--- a/p4.css
+++ b/p4.css
@@ -1,29 +1,22 @@
-
-
-/* <h1>p1_Nacimiento de los primates</h1>
-				<link href="p1.css" type="text/css" rel="stylesheet"/> */
-
-
-
 body{
 			font-family: #00ffffarial;
 			
-			background-image: url(http://3.bp.blogspot.com/-r7XwslNU8fY/UbczbxQe7SI/AAAAAAAAdaQ/ebOaJ8uJHPY/s1600/cielo+y+nubes+vistas+desde+arriba.jpg);
+			background-color:  black;
 			font-size: 15pt;
 			}
 			
 			h1
 			{
 
-			color:white;
+			color:#00ff33;
 			font-style: oblique;
 			}
 	
 			h2
 			{
 			font-family: times new roman;
-			font-size: 26pt;
-			color:red;
+			font-size: 20pt;
+			color:#ff0000;
 			font-weight:bold;
 			}
 			
@@ -36,16 +29,16 @@ body{
 			
 			.clase
 			{
+
 			color:#ffff00;
 			font-style: oblique;
 			}
 			
 			.uno{
-					
+					 
   border: 1px solid #98be10;
   background: #f6feda;
 			}
-			
 			
 			#escuson{
 		background-color:  #ff0000;
